--- a/pages/notice.html
+++ b/pages/notice.html
@@ -5,6 +5,24 @@
     <h1 class="glitch-text">お知らせ</h1>
 </div>
 
+<div class="contents_block" id="20250626">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.06.26
+        <p>トップページにメンバーのSNSリンクを追加しました。</p>
+    </div>
+</div>
+
+<div class="contents_block" id="20250531">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.05.31
+        <p><a href="/?p=phanart.hisui-special">灯翠さん ファンアート</a> まとめページを公開しました。</p>
+    </div>
+</div>
+
 <div class="contents_block" id="20250403">
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
