--- a/pages/phanart.html
+++ b/pages/phanart.html
@@ -22,4 +22,10 @@
     <img src="/static/img/phanart/oan/000-cover.jpg" alt="" class="phanart-artist-cover">
 </div>
 
+<div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="/?p=phanart.hisui-special"></a>
+    <h2>灯翠ちゃん</h2>
+    <p>灯翠ちゃんのファンアートをまとめてご紹介しています。</p>
+</div>
+
 <div class="load-content" data-loadfile="/pages/parts/phanart-recruit"></div>
