update schedule cache

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -32,8 +32,7 @@
         const url = apiurl + "?target=" + target_sheet;
 
         // キャッシュ保持時間（ミリ秒）
-        const CACHE_DURATION = 0;
-        // const CACHE_DURATION = 12 * 60 * 60 * 1000;
+        const CACHE_DURATION = 12 * 60 * 60 * 1000;
         const CACHE_KEY = "schedule_cache";
         const TIMESTAMP_KEY = "schedule_cache_time";
 
