update schedule tag

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -84,7 +84,7 @@
 
                 const listItem = `
                     <a href="/?p=schedule_detail&sc=${schedule.index}" class="link-list-a">
-                        <li>
+                        <li ${liId}>
                             <p class="date">
                                 <svg role="img" aria-label="蝶々">
                                     <use href="#butterfly"></use>
