update schedule tag

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -1,6 +1,12 @@
 <div id="page-title" style="display: none;">スケジュール [誘蛾灯の導き]</div>
 <div id="page-description" style="display: none;">ファントムシータのイベント等のスケジュールです。</div>
 
+<style>
+    #next {
+        background-color: #ffffff33;
+    }
+</style>
+
 <div class="contents_block">
     <h1 class="glitch-text">スケジュール</h1>
     <p style="font-size: small;">
